JET lesson 1 part 4

--- a/src/js/views/dashboard.html
+++ b/src/js/views/dashboard.html
@@ -3,8 +3,10 @@
  The Universal Permissive License (UPL), Version 1.0
  -->
 <div class="oj-hybrid-padding">
-  <h1>Dashboard Content Area</h1>
-  <div>
-      To change the content of this section, you will make edits to the dashboard.html file located in the /js/views folder.
-  </div>
+    <h1>Dashboard Content Area</h1>
+    <h2><input data-bind="textInput: name" /></h2>
+    <h2><span data-bind="text: name"></span></h2>
+    <div>
+        To change the content of this section, you will make edits to the dashboard.html file located in the /js/views folder.
+    </div>
 </div>
