JET lesson 1 part 6

--- a/src/js/views/dashboard.html
+++ b/src/js/views/dashboard.html
@@ -6,6 +6,18 @@
     <h1>Dashboard Content Area</h1>
     <h2><input data-bind="textInput: name" /></h2>
     <h2><span data-bind="text: name"></span></h2>
+
+    <div id="div1">
+        <oj-label for="dateTime">Default</oj-label>
+        <oj-input-date-time id="dateTime" value='{{value}}'>
+        </oj-input-date-time>
+
+        <br/><br/>
+
+        <span class="oj-label">Current component value is:</span>
+        <span data-bind="text: value"></span>
+    </div>
+
     <div>
         To change the content of this section, you will make edits to the dashboard.html file located in the /js/views folder.
     </div>
