--- a/src/js/views/incidents.html
+++ b/src/js/views/incidents.html
@@ -3,8 +3,18 @@
  The Universal Permissive License (UPL), Version 1.0
  -->
 <div class="oj-hybrid-padding">
-  <h1>Incidents Content Area</h1>
-  <div>
-      To change the content of this section, you will make edits to the incidents.html file located in the /js/views folder.
-  </div>
+    <h1>Incidents Content Area</h1>
+
+    <div>
+        <oj-chart id="pieChart" type="pie" series="[[datasource]]" style="max-width:500px;width:100%;height:350px;">
+        </oj-chart>
+        <oj-chart id="barChart" type="bar" series="[[datasource]]" style="max-width:500px;width:100%;height:350px;">
+        </oj-chart>
+
+
+    </div>
+
+    <div>
+        To change the content of this section, you will make edits to the incidents.html file located in the /js/views folder.
+    </div>
 </div>
