--- a/src/js/views/incidents.html
+++ b/src/js/views/incidents.html
@@ -5,10 +5,16 @@
 <div class="oj-hybrid-padding">
     <h1>Incidents Content Area</h1>
 
-    <div>
-        <oj-chart id="pieChart" type="pie" series="[[datasource]]" style="max-width:500px;width:100%;height:350px;">
+    <oj-label for="basicSelect">Select Chart</oj-label>
+    <oj-select-one id="basicSelect" value="{{val}}" style="max-width:20em">
+        <oj-option value="pie">Pie</oj-option>
+        <oj-option value="bar">Bar</oj-option>
+    </oj-select-one>
+
+    <div class="oj-choice-row">
+        <oj-chart id="pieChart" type="[[val]]" series="[[datasource]]" style="max-width:500px;width:100%;height:350px;">
         </oj-chart>
-        <oj-chart id="barChart" type="bar" series="[[datasource]]" style="max-width:500px;width:100%;height:350px;">
+        <oj-chart id="barChart" type="[[val]]" series="[[datasource]]" style="max-width:500px;width:100%;height:350px;">
         </oj-chart>
 
 
