--- a/src/js/views/customers.html
+++ b/src/js/views/customers.html
@@ -3,8 +3,22 @@
  The Universal Permissive License (UPL), Version 1.0
  -->
 <div class="oj-hybrid-padding">
-  <h1>Customers Content Area</h1>
-  <div>
-      To change the content of this section, you will make edits to the customers.html file located in the /js/views folder.
-  </div>
+    <h1>Customers Content Area</h1>
+    <div class="oj-flex">
+        <div class="oj-sm-only-flex-direction-column oj-flex-item oj-flex oj-panel oj-margin oj-panel-alt1">
+            <div class="oj-flex-item oj-panel oj-margin oj-panel-alt2">
+
+            </div>
+            <div class="oj-flex-item oj-panel oj-margin oj-panel-alt3">
+
+            </div>
+
+        </div>
+        <div class="oj-flex-item oj-panel oj-margin oj-panel-alt2">
+
+        </div>
+        <div class="oj-flex-item oj-panel oj-margin oj-panel-alt3">
+
+        </div>
+    </div>
 </div>
