--- a/src/js/views/about.html
+++ b/src/js/views/about.html
@@ -3,8 +3,29 @@
  The Universal Permissive License (UPL), Version 1.0
  -->
 <div class="oj-hybrid-padding">
-  <h1>About Content Area</h1>
-  <div>
-      To change the content of this section, you will make edits to the about.html file located in the /js/views folder.
-  </div>
+    <h1>About Content Area</h1>
+    <div class="oj-flex">
+        <div class="oj-flex-item oj-panel oj-margin">
+            <oj-status-meter-gauge id="gauge10" min="0" max="100" value="{{value10}}" orientation="circular" label="[[labelGauge]]" class="circular-status-meter-common circular-status-meter-large" style="max-width:500px;width:100%;height:300px;align-content: center">
+            </oj-status-meter-gauge>
+        </div>
+
+        <div class="oj-flex-item oj-panel oj-margin">
+            <oj-label for="pieChartId" style="padding-bottom:8px;">
+                Label Position:
+            </oj-label>
+            <!-- label position toggle button -->
+            <oj-select-one id="pieChartId" aria-label="Choose only one setting." aria-controls="pieChart" on-value-changed="[[dataLabelPositionChange]]">
+                <!-- ko foreach: dataLabelPositionOptions -->
+                <oj-option value="[[value]]">
+                    <span data-bind="text: label"> </span>
+                </oj-option>
+                <!-- /ko -->
+            </oj-select-one>
+            <oj-chart id="pieChart" type="pie" series="[[pieSeriesValue]]" animation-on-display="auto" animation-on-data-change="auto" style-defaults.data-label-position="[[dataLabelPositionValue]]" style="max-width:500px;width:100%;height:350px;">
+            </oj-chart>
+
+        </div>
+    </div>
+
 </div>
