--- a/src/js/views/employees.html
+++ b/src/js/views/employees.html
@@ -4,7 +4,10 @@
  -->
 <div class="oj-hybrid-padding">
     <h1>Employees Content Area</h1>
-    <div>
-        To change the content of this section, you will make edits to the customers.html file located in the /js/views folder.
+    <oj-picto-chart id='pictochart1' items="[[pictoChartItems]]" animation-on-display="auto" column-count="5" style="vertical-align:middle; margin-right:15px">
+    </oj-picto-chart>
+    <div style="display:inline-block; vertical-align:middle; font-weight:bold">
+        <span style="color:#333333; font-size:1.1em">7 out of 10 college students</span><br>
+        <span style="color:#ed6647; font-size:1.3em">have sleep problems.</span>
     </div>
 </div>
