--- a/src/js/views/collComponent.html
+++ b/src/js/views/collComponent.html
@@ -5,8 +5,7 @@
 <div class="oj-hybrid-padding">
     <h1>Component Content Area</h1>
     <div class="oj-flex">
-        <oj-table id='table' aria-label='Departments Table' data='[[dataprovider]]' selection-mode='{"row": "multiple", "column": "multiple"}' dnd='{"reorder": {"columns": "enabled"}}' scroll-policy='loadMoreOnScroll' scroll-policy-options='{"fetchSize": 10}'
-            columns='[{"headerText": "Department Id", 
+        <oj-table id='table' aria-label='Departments Table' data='[[dataprovider]]' selection-mode='{"row": "multiple", "column": "multiple"}' dnd='{"reorder": {"columns": "enabled"}}' scroll-policy-options='{"fetchSize": 10}' columns='[{"headerText": "Department Id", 
                        "field": "DepartmentId",
                        "headerClassName": "oj-sm-only-hide",
                        "className": "oj-sm-only-hide",
@@ -22,6 +21,8 @@
                       {"headerText": "Manager Id", 
                        "field": "ManagerId",
                        "resizable": "enabled"}]' style='width: 75%; height: 200px;'>
+            <oj-paging-control id="paging" data='[[dataprovider]]' page-size='10' slot='bottom'>
+            </oj-paging-control>
         </oj-table>
 
     </div>
